modification to support cpp library

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,4 +1,3 @@
-idf_component_register(SRCS "gatts_demo.c" "imu.c" "imu_bles.c" "ble_server.c"
-                    INCLUDE_DIRS "." "..components/esp32_BNO08x")
-
+idf_component_register(SRCS "gatts_demo.cpp" "imu.cpp" "imu_bles.c" "ble_server.c"
+                    INCLUDE_DIRS "." "../components/esp32_BNO08x")
 add_compile_definitions("ESP32C3_IMU_CONFIG")
